Updated nodejs page.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -7,7 +7,7 @@
     "api-get-started": "API",
     "Using API": "Using API",
     "api": "API",
-    "botframework-get-started": "Bot Framework",
+    "botframework-get-started": "Microsoft Bot Framework",
     "Using Bot Frameworks": "Using Bot Frameworks",
     "botframeworks": "Bot Frameworks",
     "get-started": "Getting Started",
@@ -16,12 +16,10 @@
     "C#": "C#",
     "msbot-nodejs-data": "Using Data Collections",
     "Using Data Collections": "Using Data Collections",
-    "msbot-nodejs-implementation": "Implementation",
+    "msbot-nodejs-implementation": "How to Implement",
     "Implementation - NodeJS": "Implementation - NodeJS",
     "msbot-nodejs-user": "Updating User Information",
     "Updating User Information": "Updating User Information",
-    "msbot-nodejs": "Microsoft Bot Framework - NodeJS",
-    "NodeJS": "NodeJS",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
