--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -12,7 +12,7 @@
     "Introduction": "Introduction",
     "msbot-csharp": "Microsoft Bot Framework - C#",
     "C#": "C#",
-    "botframework-get-started": "Microsoft Bot Framework",
+    "msbot-get-started": "Microsoft Bot Framework",
     "Using Bot Frameworks": "Using Bot Frameworks",
     "msbot-nodejs-data": "Using Data Collections",
     "Using Data Collections": "Using Data Collections",
