Updated site and sections.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -20,9 +20,12 @@
     "Implementation - NodeJS": "Implementation - NodeJS",
     "msbot-nodejs-user": "Updating User Information",
     "Updating User Information": "Updating User Information",
+    "telegraf-get-started": "Telegraf for Telegram",
+    "Using Telegraf": "Using Telegraf",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
+    "GitHub": "GitHub",
     "Getting Started": "Getting Started",
     "Microsoft Bot Framework": "Microsoft Bot Framework",
     "More": "More"
