--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -13,7 +13,6 @@
     "msbot-csharp": "Microsoft Bot Framework - C#",
     "C#": "C#",
     "msbot-get-started": "Microsoft Bot Framework",
-    "Using Bot Frameworks": "Using Bot Frameworks",
     "msbot-nodejs-data": "Using Data Collections",
     "Using Data Collections": "Using Data Collections",
     "msbot-nodejs-implementation": "How to Implement",
@@ -21,14 +20,18 @@
     "msbot-nodejs-user": "Updating User Information",
     "Updating User Information": "Updating User Information",
     "telegraf-get-started": "Telegraf for Telegram",
-    "Using Telegraf": "Using Telegraf",
+    "telegraf-nodejs-data": "Using Data Collections",
+    "telegraf-nodejs-implementation": "How to Implement",
+    "Implementation": "Implementation",
+    "telegraf-nodejs-user": "Updating User Information",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
     "GitHub": "GitHub",
     "Getting Started": "Getting Started",
     "Microsoft Bot Framework": "Microsoft Bot Framework",
-    "More": "More"
+    "More": "More",
+    "Telegraf for Telegram": "Telegraf for Telegram"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
