--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -8,30 +8,42 @@
     "Using API": "Using API",
     "api": "API",
     "botframeworks": "Bot Frameworks",
+    "botkit-get-started": "Botkit",
+    "botkit-nodejs-data": "Using Data Collections",
+    "Using Data Collections": "Using Data Collections",
+    "botkit-nodejs-implementation": "How to Implement",
+    "Implementation": "Implementation",
+    "botkit-nodejs-user": "Updating User Information",
+    "Updating User Information": "Updating User Information",
     "get-started": "Getting Started",
     "Introduction": "Introduction",
+    "jovo-get-started": "Jovo for Alexa and Google Assistant",
+    "jovo-nodejs-data": "Using Data Collections",
+    "jovo-nodejs-implementation": "How to Implement",
+    "jovo-nodejs-user": "Updating User Information",
     "msbot-csharp": "Microsoft Bot Framework - C#",
     "C#": "C#",
     "msbot-get-started": "Microsoft Bot Framework",
     "msbot-nodejs-data": "Using Data Collections",
-    "Using Data Collections": "Using Data Collections",
     "msbot-nodejs-implementation": "How to Implement",
     "Implementation - NodeJS": "Implementation - NodeJS",
     "msbot-nodejs-user": "Updating User Information",
-    "Updating User Information": "Updating User Information",
     "telegraf-get-started": "Telegraf for Telegram",
     "telegraf-nodejs-data": "Using Data Collections",
     "telegraf-nodejs-implementation": "How to Implement",
-    "Implementation": "Implementation",
     "telegraf-nodejs-user": "Updating User Information",
     "Docs": "Docs",
     "API": "API",
     "Help": "Help",
     "GitHub": "GitHub",
     "Getting Started": "Getting Started",
+    "Text": "Text",
+    "Voice": "Voice",
     "Microsoft Bot Framework": "Microsoft Bot Framework",
     "More": "More",
-    "Telegraf for Telegram": "Telegraf for Telegram"
+    "Telegraf for Telegram": "Telegraf for Telegram",
+    "Jovo": "Jovo",
+    "Botkit": "Botkit"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
